# aocl-sparse

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  LICENSE.txt  NOTICES  README.md  index.html
.github/: psdb-jenkins-trigger.yml  pull_request_template.md  recipients.yaml  self_enablement_config.yaml
.github/.ai_pr_platform/: ai-pr-platform-app.yml  ai_coverity.json
.github/PULL_REQUEST_TEMPLATE/: common-mistakes.md  pr.md  small.md
.github/workflows/: ai-code-review-trigger.yml  branch-name-check.yml  codeql_cpp_placeholder.yml
cmake/: Coverage.cmake  Dependencies.cmake  FindSphinx.cmake  Packaging.cmake  Suppressions.cmake  find_blis_lapack.cmake
cmake/presets/: README.MD  base.json  linux-make.json  linux-ninja.json  win-msvc.json  win-ninja.json
docs/: CMakeLists.txt  Doxyfile  analysis.rst  api-template  auxiliary.rst  conf.py  convert.rst  functions.rst  index.rst  migration.rst  refs.bib  solvers.rst  storage.rst  types.rst
docs/_template/flavors/local/: footer.jinja  header.jinja  left-side-menu.jinja
docs/images/: sparse_representation.drawio
sparse/html/: .buildinfo  analysis.html  auxiliary.html  convert.html  functions.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  solvers.html  types.html
sparse/html/.doctrees/: analysis.doctree  auxiliary.doctree  convert.doctree  environment.pickle  functions.doctree  index.doctree  solvers.doctree  types.doctree
sparse/html/_sources/: convert.rst  functions.rst  types.rst
sparse/html/_static/: basic.css  code_word_breaks.js  custom.css  documentation_options.js  fonts.css  fonts.css.map  fonts.scss  rdcMisc.js  renameVersionLinks.js  rocm_footer.css  rocm_header.css  theme_mode_captions.js
tests/: CMakeLists.txt  sample_csrmv.cpp  test.sh
tests/benchmarks/: CMakeLists.txt  aoclsparse_test.cpp  bench_tests.cmake  client.cpp  csrmv.sh  csrmv_mt.sh  dcsrmv.sh  ellmv.sh  scsrmv.sh
tests/benchmarks/matrices/: get_matrices_1.sh  get_matrices_2.sh  get_matrices_3.sh  get_matrices_4.sh  get_matrices_5.sh  matrixlist
tests/common/: aoclsparse_stats.cpp  aoclsparse_template_specialization.cpp  aoclsparse_utility.cpp  utility.cpp
tests/examples/: CMakeLists.txt  README  README.md  sample_axpyi.cpp  sample_csr2m.cpp  sample_csr2m_cpp.cpp  sample_csrmm.cpp  sample_csrmv.cpp  sample_dotmv.cpp  sample_dotp.cpp  sample_dsorv.cpp  sample_dsymgs.cpp  sample_dsymgs_mv.cpp  sample_dsyrk.cpp  sample_dsyrkd.cpp  sample_dtrsm.cpp  sample_dtrsv.cpp  sample_itsol_d_cg.cpp  sample_itsol_d_cg_rci.cpp  sample_itsol_d_gmres.cpp  sample_itsol_d_gmres_rci.cpp  sample_itsol_s_cg.cpp  sample_itsol_s_cg_rci.cpp  sample_itsol_s_gmres.cpp  sample_itsol_s_gmres_rci.cpp  sample_itsol_z_gmres.cpp  sample_itsol_z_gmres_rci.cpp  sample_mv_cpp.cpp  sample_roti.cpp  sample_sctr.cpp  sample_sp2md.cpp  sample_spmmd.cpp  sample_spmv.cpp  sample_spmv_c.c  sample_spmv_multi_instance.c  sample_syprd.cpp  sample_tcsr_dspmv.cpp  sample_tcsr_dtrsv.cpp  sample_tcsr_ztrsv.cpp  sample_trsv_cpp.cpp  (+7 more)
tests/functionality/: CMakeLists.txt  cg_tests.cpp  functionality_tests_utils.cpp  functionality_tests_utils.h  hint_tests.cpp  trsv_tests.cpp
tests/include/: aoclsparse.hpp  aoclsparse_arguments.hpp  aoclsparse_check.hpp  aoclsparse_convert.hpp  aoclsparse_datatype2string.hpp  aoclsparse_flops.hpp  aoclsparse_gbyte.hpp  aoclsparse_init.hpp  aoclsparse_interface.hpp  aoclsparse_no_ext_benchmarking.hpp  aoclsparse_random.hpp  aoclsparse_reference.hpp  aoclsparse_stats.hpp  aoclsparse_test.hpp  aoclsparse_utility.hpp  benchmark.hpp  flops.hpp  gbyte.hpp  testing_add.hpp  testing_axpyi.hpp  testing_blkcsrmv.hpp  testing_bsrmv.hpp  testing_complex_mtx_load.hpp  testing_cscmv.hpp  testing_csr2csc.hpp  testing_csr2m.hpp  testing_csrmm.hpp  testing_csrmv.hpp  testing_csrsv.hpp  testing_diamv.hpp  testing_dotci.hpp  testing_doti.hpp  testing_dotmv.hpp  testing_dotui.hpp  testing_ellmv.hpp  testing_ellthybmv.hpp  testing_elltmv.hpp  testing_gthr.hpp  testing_gthrz.hpp  testing_ilu.hpp  (+12 more)
tests/scripts/: README.txt  aocl-sparse_test_plan.xlsx  inputs.yaml  requirements.txt  sparse_test.py
tests/unit_tests/: CMakeLists.txt  README  README.md  axpyi_tests.cpp  blkcsrmv_tests.cpp  bsr_convert_tests.cpp  bsrmv_tests.cpp  cg_tests.cpp  cg_ut_functions.hpp  common_data_utils.cpp  common_data_utils.h  context_tests.cpp  conversion_tests.cpp  coo_tests.cpp  copy_tests.cpp  createbsr_tests.cpp  createcsc_tests.cpp  createcsc_ut_functions.hpp  createcsr_tests.cpp  createtcsr_tests.cpp  csr2m_tests.cpp  csr_add_test.cpp  csr_convert_tests.cpp  csrmm_tests.cpp  csrmv_tests.cpp  diamv_tests.cpp  dispatcher_tests.cpp  dotmv_tests.cpp  dotp_tests.cpp  ellmv_tests.cpp  export_mat_tests.cpp  extreme_value_tests.cpp  gmres_tests.cpp  gmres_ut_functions.hpp  gthr_tests.cpp  hint_tests.cpp  ilu_tests.cpp  kt_kernels.cpp  kt_tests.cpp  ktlvl2_kernels.cpp  (+26 more)
tests/unit_tests/data/: CMakeLists.txt  tinyc.mtx  tinyr.mtx
tools/: check_copyright.sh  check_style.sh  collate_asan.sh  fix_copyright.sh  polisher.sh  results_match.awk  results_xml.awk  rst_add_project.awk  rst_add_project_all.sh  twosampletest.py  warningtable.sh
